--- a/connections/rockpaperscissors/app/src/main/res/values/strings.xml
+++ b/connections/rockpaperscissors/app/src/main/res/values/strings.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="app_name">Rock Paper Scissors</string>
+  <string name="app_name">Shared Clapping</string>
   <string name="error_missing_permissions">Cannot start without required permissions</string>
 
-  <string name="codename">Your codename: %s</string>
-  <string name="opponent_name">Opponent: %s</string>
+  <string name="codename">Your clapname: %s</string>
+  <string name="opponent_name">Other clappers: %s</string>
   <string name="no_opponent">none (yet)</string>
 
   <string name="status_disconnected">Disconnected</string>
   <string name="status_searching">Searching</string>
+  <string name="status_connecting">Connecting</string>
   <string name="status_connected">Connected</string>
 
   <string name="game_choice">You chose %s</string>
